Fix dark mode background

--- a/css/dark.css
+++ b/css/dark.css
@@ -1,6 +1,6 @@
 /* Zusätzliche Styles für Dark Mode */
 body.dark-mode {
-  background-color: #121212;
+  background-color: #000 !important;
   color: #f5f5f5;
 }
 body.dark-mode a {
